--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "concurrently \"bun:next:dev\" \"bun:slicemachine\" --names \"next,slicemachine\" --prefix-colors gray,magenta",
     "next:dev": "next",
-    "build": "rm -rf .next/cache/fetch-cache && next build",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "slicemachine": "start-slicemachine",
@@ -15,14 +15,16 @@
     "@prismicio/client": "latest",
     "@prismicio/next": "latest",
     "@prismicio/react": "latest",
-    "axios": "latest",
-    "framer-motion": "latest",
-    "next": "14.0.1",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-slot": "^1.0.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "lucide-react": "^0.363.0",
+    "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "latest",
-    "react-icons": "latest",
-    "zod": "latest"
+    "tailwind-merge": "^2.2.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@slicemachine/adapter-next": "latest",
@@ -32,17 +34,15 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
-    "clsx": "latest",
     "concurrently": "latest",
     "eslint": "^8",
-    "eslint-config-next": "14.0.1",
+    "eslint-config-next": "14.1.4",
     "postcss": "^8",
     "prettier": "latest",
     "prettier-plugin-tailwindcss": "latest",
     "schema-dts": "latest",
     "slice-machine-ui": "latest",
     "tailwindcss": "^3.3.0",
-    "tailwind-merge": "latest",
     "typescript": "^5"
   }
 }
