--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@prismicio/client": "latest",
     "@prismicio/next": "latest",
     "@prismicio/react": "latest",
+    "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
@@ -23,6 +24,7 @@
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.0.1",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7"
   },
