--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "recharts": "2.15.4",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
-    "tailwindcss-animate": "^1.0.7",
+    "tw-animate-css": "^1.4.0",
     "vaul": "^1.1.2",
     "zod": "^4.2.0"
   },
